<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

       <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ak_php"
                android:scaleType="centerCrop"/>


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="160dp"

               android:orientation="horizontal"
               tools:layout_editor_absoluteX="16dp"
               tools:layout_editor_absoluteY="202dp"
               tools:ignore="MissingConstraints">

               <ImageView
                   android:layout_width="120dp"
                   android:layout_height="120dp"
                   android:layout_marginLeft="40dp"
                   android:src="@drawable/php_1" />

               <ImageView
                   android:layout_width="120dp"
                   android:layout_height="120dp"
                   android:layout_marginLeft="40dp"
                   android:src="@drawable/php_2" />

               <ImageView
                   android:layout_width="120dp"
                   android:layout_height="120dp"
                   android:layout_marginLeft="40dp"
                   android:src="@drawable/php_3" />

               <ImageView
                   android:layout_width="120dp"
                   android:layout_height="120dp"
                   android:layout_marginLeft="40dp"
                   android:src="@drawable/php_4" />

           </LinearLayout>

       </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtPhirHeraPheri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/MovieTitle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtImdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPhirHeraPheri"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/yellow"
                android:padding="5dp"
                android:text="@string/imdb"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtComedy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPhirHeraPheri"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/txtImdb"
                android:background="@color/orange"
                android:padding="5dp"
                android:text="@string/comedy"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPhirHeraPheri"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/txtComedy"
                android:background="@color/brown"
                android:padding="5dp"
                android:text="@string/fun"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtImdb"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/movieDescription"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtPostProduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDesc"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:background="@color/blue"
                android:padding="5dp"
                android:text="@string/postProd"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDesc"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="40dp"
                android:text="2006"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtReadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtYear"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/txtYear"
                android:text="@string/readMore"
                android:textColor="@color/blue"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey">

            <TextView
                android:id="@+id/txtSimilarMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simMovies"
                android:textColor="@color/white"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"/>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtSimilarMovies"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/herapheri"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/welcome"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/singh_is_king"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/beauty_and_the_beast"/>


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/entertainment"/>


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>